# fognav_msgs

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build_deb  Dockerfile.containerize_deb  README.md  build_deb.sh  package.sh  package.xml
.github/workflows/: fognav-msgs-artifactory-riscv64.yaml  fognav-msgs-artifactory.yaml  fognav-msgs-docker.yaml
action/: ComputePathThroughPoses.action  ComputePathToPose.action  FollowPath.action  NavigateThroughPoses.action  NavigateToPose.action
msg/: ControlInterfaceDiagnostics.msg  Geofence.msg  GeofenceArray.msg  NavigationDiagnostics.msg  Task.msg  TaskArray.msg  TaskMetaData.msg  Trajectory.msg  TrajectoryPose.msg
srv/: CheckBumperClear.srv  GetCostmap.srv  IsPathValid.srv  ResamplePath.srv  SetGeofence.srv  TransformPath.srv  TransformPose.srv
