<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fognav_msgs</name>
  <version>1.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mehmet.killioglu@unikie.com">Mehmet Killioglu</maintainer>
  <license>Apache-2.0</license>
  <author email="michael.jeronimo@intel.com">Michael Jeronimo</author>
  <author email="stevenmacenski@gmail.com">Steve Macenski</author>
  <author email="carlos.a.orduno@intel.com">Carlos Orduno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>fognav_common</build_depend> -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geographic_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
